--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "my first socket.io app",
   "dependencies": {
     "express": "^4.18.2",
+    "http": "^0.0.1-security",
     "socket.io": "^4.7.2"
   }
 }
